--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xcx-vpen",
   "version": "0.0.0",
-  "description": "extension for Xcratch",
+  "description": " SVG vector pen extension for Xcratch",
   "scripts": {
     "setup-dev": "node ./scripts/setup-dev.mjs",
     "build": "rollup -c ./scripts/rollup.config.mjs",
@@ -32,5 +32,9 @@
     "mocha": "^10.5.2",
     "rollup": "^4.18.0",
     "rollup-plugin-polyfill-node": "^0.13.0"
+  },
+  "dependencies": {
+    "@svgdotjs/svg.js": "^3.2.4",
+    "file-saver": "^2.0.5"
   }
 }
