--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rollup -c ./scripts/rollup.config.mjs",
     "version": "node ./scripts/version-build.mjs && git add dist",
     "watch": "rollup -c ./scripts/rollup.config.mjs --watch",
-    "test": "mocha"
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
@@ -24,14 +24,15 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-multi-entry": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "chai": "^4.3.10",
+    "@testing-library/react": "^16.3.0",
+    "babel-jest": "^30.2.0",
     "core-js": "^3.37.1",
     "eslint": "^8.57.0",
     "eslint-config-scratch": "^9.0.8",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-mocha": "^10.4.3",
     "fs-extra": "^11.2.0",
-    "mocha": "^10.5.2",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "rollup": "^4.18.0",
     "rollup-plugin-polyfill-node": "^0.13.0"
   },
